:bomb: error case implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">G-news</string>
     <string name="headlines_from_india">HeadLines: India</string>
     <string name="err_occurred">Error Occurred</string>
+    <string name="retry">Retry</string>
+    <string name="error_message">Oops something went wrong!</string>
 </resources>
